# axum_web_boilerplate

./: .gitignore  Cargo.toml
src/: config.rs  lib.rs  main.rs  router.rs
src/module/user/: controller.rs  router.rs
