[package]
edition = "2021"
name = "axum-web-boilerplate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
clap = {version = "4.0.18", features = ["derive", "env"]}
tokio = {version = "1.21.2", features = ["full"]}

tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
# db
sqlx = {version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"]}

anyhow = "1.0"
dotenv = "0.15.0"
env_logger = "0.9.1"
log = "0.4.17"
